[package]
name = "xpq"
version = "0.1.2"
authors = ["Fabio B. Silva <fabio.bat.silva@gmail.com>"]
description = "Simple command line tool for analyzing parquet files"
documentation = "https://github.com/FabioBatSilva/xpq"
repository = "https://github.com/FabioBatSilva/xpq"
homepage = "https://github.com/FabioBatSilva/xpq"
categories = ["command-line-utilities", "parquet"]
keywords = ["parquet", "cli", "command"]
readme = "README.md"
license = "MIT"

[dependencies]
csv = "1.1.1"
rand = "0.7.0"
regex = "1.2.1"
clap = "2.33.0"
parquet = "0.14"
either = "1.5.2"
walkdir = "2.2.9"
tabwriter = "1.1.0"
quick-error = "1.2.2"
unicode-width = "0.1.5"
streaming-stats = "0.2"

[dev-dependencies]
tempfile = "3.1.0"
chrono = "0.4.7"
