[package]
name = "xpq"
version = "0.2.0"
edition = "2018"
authors = ["Fabio B. Silva <fabio.bat.silva@gmail.com>"]
description = "Simple command line tool for analyzing parquet files"
documentation = "https://github.com/FabioBatSilva/xpq"
repository = "https://github.com/FabioBatSilva/xpq"
homepage = "https://github.com/FabioBatSilva/xpq"
categories = ["command-line-utilities", "parquet"]
keywords = ["parquet", "cli", "command"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = "^2.33"
csv = "^1.1"
either = "^1.5"
parquet = "^1.0"
quick-error = "^1.2"
rand = "^0.7"
regex = "^1.3"
streaming-stats = "^0.2"
tabwriter = "^1.2"
unicode-width = "^0.1"
walkdir = "^2.3"

[dev-dependencies]
tempfile = "3.1.0"
chrono = "0.4.7"
